chore: reorganiza pastas e arquivos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Agenda</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./styles/style.css">
 
     </head>
 
@@ -25,7 +25,7 @@
 
         <div class="container-botoes">
             <a href="./index.html">
-                <img id="img-home" src="./img_home.svg" alt="home">
+                <img id="img-home" src="./assets/img_home.svg" alt="home">
             </a>            
             <button class="botao-novo" id="botao-novo">Novo Contato</button>
             <button class="botao-lista" id="botao-lista" >Lista de contatos</button>
@@ -37,7 +37,7 @@
 
         <main>
 
-            <img id="imagem-fundo" src="./imagem_fundo.jpg" alt="imagem de fundo">
+            <img id="imagem-fundo" src="./assets/imagem_fundo.jpg" alt="imagem de fundo">
 
                     
             <ul class="texto-inicial" id="texto-inicial">
@@ -92,7 +92,7 @@
 
 
         <!--Script JS-->
-        <script type="module" src="./scripts.js"></script>
+        <script type="module" src="./scripts/scripts.js"></script>
 
     </body>
 
